# QT_CMake

./: .gitignore  CMakeLists.txt  README.md
Chat/: CMakeLists.txt  common.h  http_manager.cpp  logindialog.cpp  logindialog.h  main.cpp  mainwindow.cpp  mainwindow.h  regsdialog.cpp  regsdialog.h  regsdialog.ui  resources.qrc
Chat/include/: global.h  http_manager.h  logindialog.h  mainwindow.h  regsdialog.h  singleton.h
Chat/styles/: stylesheet.qss
Chat/ui/: logindialog.ui  mainwindow.ui
QPushButton/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
